# advent2022

./: CMakeLists.txt  day1.cpp  day2.cpp  day3.cpp  day4.cpp  main.cpp  test.txt  util.cpp  util.h
